@@ -1,3 +1,10 @@
+2003-01-16  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/winDde.test:
+	* win/tclWinDde.c (Tcl_DdeObjCmd): Prevent crash when empty
+	service name is passed to 'dde eval' and goto errorNoResult in
+	request and poke error cases to free up any allocated data.
+
 2003-01-16  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* win/tclWin32Dll.c (squelch_warnings): Squelch
